# image_processing_lib

./: .gitignore  CMakeLists.txt  LICENSE  README.md  requirements.txt
.github/workflows/: ci.yml
cpp/src/: bindings.cpp  filters.cpp  filters_all.cpp
examples/: demo.py
python/: cli.py
python/image_processor/: __init__.py  benchmarks.py  processor.py
tests/: test_filters.py
